[NTP::RecentTabs] Do not fetch all pages when not a recent tab is added.

Currently, all offline pages are fetched when a new offline page is
added (even it if is not a recent tab). However, there is no sense to
refetch if there is no new recent tabs.

This CL changes the logic to fetch only when the added offline page is a
recent tab.

BUG=672433

Review-Url: https://codereview.chromium.org/2595873002
Cr-Commit-Position: refs/heads/master@{#440096}

Former-commit-id: ad80f041ddc7bff1360592184661fd51bdf414e9